# plm-local

./: .gitignore  Cargo.toml  Readme.md  justfile  pixi.toml  recipe.yaml
.github/workflows/: build.yml
src/: Readme.md  RunInference.md  lib.rs  main.rs
src/plm_local/: parquet.rs
