[package]
name = "plm-local"
edition = "2021"
authors = ["Zach Charlop-Powers<zach.charlop.powers@gmail.com>"]
description = "Local LLMs for Proteins"
license = "MIT OR Apache-2.0"


[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels"]

[dependencies]
anyhow = "1.0.94"
candle-core = "0.8.1"
candle-hf-hub = "0.3.3"
candle-metal-kernels = { version = "0.8.1", optional = true }
candle-nn = "0.8.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
ferritin-amplify = { git = "https://github.com/zachcp/ferritin", version = "*", package = "ferritin-amplify" }
polars = { version = "0.45.0", features = ["polars-io", "parquet"] }
serde_json = "1.0.133"
tokenizers = { version = "0.21.0" }

[target.'cfg(target_os = "macos")'.features]
metal = []

[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels = { version = "0.8.1" }
